--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+html *{
+    font-family: 'Roboto', sans-serif;
+}
+
+::placeholder {
+    font-weight: 100;
+    font-size: 16px;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
