--- a/front-end/src/assets/css/style.css
+++ b/front-end/src/assets/css/style.css
@@ -3,11 +3,73 @@
 html *{
     font-family: 'Roboto', sans-serif;
 }
-
 ::placeholder {
     font-weight: 100;
     font-size: 16px;
 }
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 10px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: -1px;
+    bottom: -5px;
+    background-color: #E43636;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: white;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px white;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
+
+
 
 @tailwind base;
 @tailwind components;
